style: indentation and css selector	\
fix indentation and add css selector for board table

--- a/src/main/webapp/WEB-INF/static/css/main.css
+++ b/src/main/webapp/WEB-INF/static/css/main.css
@@ -1,7 +1,7 @@
 header,
 main,
 footer {
-    font-family: "NotoSerifWeb", "Noto Serif CJK Kr", "Apple SD Gothic Neo", "Malgun Gothic", sans-serif;
+    font-family: "Ubuntu", sans-serif;
     min-width: 800px;
     max-width: 1100px;
 }
@@ -26,7 +26,7 @@ main {
     margin-right: 10px;
 }
 
-#main-main>input {
+#main-main > input {
     margin-right: 4%;
 }
 
@@ -48,7 +48,7 @@ main {
     height: 600px;
 }
 
-#main-main>input {
+#main-main > input {
     float: right;
 }
 
@@ -82,4 +82,23 @@ main {
     resize: none;
     overflow-x: hidden;
     overflow-y: auto;
+}
+
+#board-table {
+    height: 100%;
+    width: 800px;
+    padding: 3px;
+    text-align: center;
+    border: 1px solid #dddddd;
+}
+
+#board-table th{
+    background-color: #eeeeee; text-align: center;
+}
+
+#board-table-view{
+    text-align: center;
+    width: 700px;
+    height: 400px;
+    border: 1px solid #dddddd;
 }
